tests/error/array_errors/array_index_set_item_by_variable.err
Error: Type mismatch (at $FILE:8:13)
  | 
6 |       arr = array(i for i in range(10))
7 |       x = 50
8 |       return arr[x]
  |              ^^^^^^ Expected return value of type `None`, got `int`

Guppy compilation failed due to 1 previous error
